ec2.tf
resource "aws_security_group" "ec2_sg" {
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = { Name = "ec2-sg" }
}

resource "aws_instance" "app_server" {
  count                  = 2
  ami                    = "ami-0d1b5a8c13042c939"
  instance_type          = var.instance_type
  subnet_id              = aws_subnet.private[count.index].id
  vpc_security_group_ids = [aws_security_group.ec2_sg.id]

  tags = { Name = "saas-app-${count.index + 1}" }
}

# Attach EC2 to target group
resource "aws_lb_target_group_attachment" "attach_ec2" {
  count             = 2
  target_group_arn  = aws_lb_target_group.saas_tg.arn
  target_id         = aws_instance.app_server[count.index].id
  port              = 80
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.saas_alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.saas_tg.arn
  }
}
